# prng-tree-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tree_rng.c
include/: utility_functions.h
lib/: CMakeLists.txt  PRNGTree.c  tree_rng.c  utilityFunctions.c  utility_functions.c
lib/include/: PRNGTree.h  utilityFunctions.h
tests/: CMakeLists.txt  testsPRNGTree.c
